# IDP

./: .gitignore  Projektidee.pptx  README.md
MISRA/: Makefile  README.md  examples  examples.c
ProjectReview/: ReviewProtocolIDPProjectGroup1.md
Questionnaire/: FaultErrorFailureHazard.md  FaultTolerance.md  FunctionalSafety.md  FunctionalSafetyRelevance.md  IEC_61508.md  README.md  RobustAndSafeCode.md  RobustAndSafeSystem.md  SafetyReliabilityRobustness.md  Seveso.md  VModel.md
acc/: CMakeLists.txt  README.md  checkMISRA.sh
acc/doc/design/: chap1-Projectdescription.tex  chap2-softwarearchitecture.tex  chap3-flowchart.tex  chap4-hazards.tex  chap5-threats.tex  chap6-requirements.tex  start.tex  title.tex
acc/doc/design/images/: GUI.drawio  MessageLayout.drawio  StateDiagramNode1.drawio  StateDiagramNode2.drawio  StateDiagrams.drawio  System.drawio
acc/libraries/CryptoComm/: CMakeLists.txt
acc/libraries/CryptoComm/include/: BTConnection.h  BTListenSocket.h  BTRuntimeError.h  CryptoComm.h  CryptoWrapper.h  bluetooth.h
acc/libraries/CryptoComm/src/: BTConnection.cpp  BTListenSocket.cpp  CryptoWrapper.cpp  bluetooth.cpp
acc/libraries/CryptoComm/test/: CryptoWrapperTest.cpp
acc/libraries/Helper/: CMakeLists.txt
acc/libraries/Helper/include/: Helper.h  ThreadWrapper.h
acc/libraries/Helper/src/: Helper.cpp
acc/libraries/Helper/test/: HelperTest.cpp
acc/libraries/bluetooth/: CMakeLists.txt
acc/libraries/bluetooth/include/: bluetooth.h
acc/libraries/bluetooth/src/: bluetooth.cpp
acc/libraries/bluetooth/test/: bluetooth_test.cpp
acc/libraries/bluetooth_conn/: CMakeLists.txt
acc/libraries/bluetooth_conn/include/: bluetooth.h
acc/libraries/bluetooth_conn/src/: bluetooth.cpp
acc/libraries/bluetooth_conn/test/: crypto_wrapper_test.cpp
acc/node1/: CMakeLists.txt  README.md
acc/node1/src/: CommThread.cpp  CommThread.h  Node1Types.h  Sensor.cpp  Sensor.h  SensorThread.cpp  SensorThread.h  main.cpp  sensor.cpp  sensor.h
acc/node2/: CMakeLists.txt
acc/node2/src/: ACCThread.cpp  ACCThread.h  CMakeLists.txt  CommThread.cpp  CommThread.h  MainWindow.cpp  MainWindow.h  Node2Types.h  main.cpp  mainwindow.ui
acc/release/node1/: CTestTestfile.cmake  Makefile  cmake_install.cmake  node1
bluetooth_demo/: Makefile  README.md  client.c  server.c
